src/objects/HWS_VersionItem__c.object
<CustomObject>
    <fields>
        <fullName>CLEI__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CLEI</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comcode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comcode</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_by_PMDI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created by PMDI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HWS_12NC__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>12NC</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_ECI_BARCODE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ECI/BARCODE</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_EDP_ActiveStatus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EDP ActiveStatus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HWS_EDP_DeletedAtSource__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EDP DeletedAtSource</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HWS_EDP_LastModifiedDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>EDP LastModifiedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HWS_Hardware_Sellable_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hardware Part Item</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Version Items</relationshipLabel>
        <relationshipName>HWS_VersionItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HWS_IsDeletedResid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsRESID Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HWS_IsRelatedToVI__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Related To VI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HWS_Life_Cycle_Status__c</fullName>
        <description>Created with the reference to the US.</description>
        <label>Life Cycle Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Stat Hello</fullName>
                </value>
                <value>
                    <fullName>true</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HWS_MANUFACTURER__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>MANUFACTURER</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_Manufacturer_Code__c</fullName>
        <description>Created as the part of the US.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Manufacturer Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_Material_Type__c</fullName>
        <description>Created as the part of the US.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Material Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_Microcode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Microcode</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_NSNCodeRelation__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSN Code Relation</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_NSNCode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>NSN Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_NSN_Source_System__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSN Source System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_ORDERABLE_ITEM__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ORDERABLE ITEM</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_OTHER__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OTHER</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_PartNumber__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Part Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_Part_Code_Part_Revision__c</fullName>
        <description>Field created to concateinate partcode and part revision as per HWST-3679</description>
        <formula>IF(AND(HWS_Source__c = &apos;PUMA2&apos;,CONTAINS(HWS_Version_Code__c,HWS_Hardware_Sellable_Item__r.CARE_PartCode__c)),
SUBSTITUTE(SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE(HWS_Version_Code__c, &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;), &quot;&amp;&quot;, &quot;&quot;), &quot;.&quot;, &quot;&quot;), &quot;%&quot;, &quot;&quot;), &quot;#&quot;, &quot;&quot;), &quot;/&quot;, &quot;&quot;), &quot;;&quot;, &quot;&quot;), &quot;:&quot;, &quot;&quot;), &quot;\&quot;&quot;, &quot;&quot;), &quot;_&quot;, &quot;&quot;), &quot;,&quot;, &quot;&quot;),
Case (HWS_Source__c, 
&quot;PUMA1&quot;, SUBSTITUTE(SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE(HWS_Version_Code__c, &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;), &quot;&amp;&quot;, &quot;&quot;), &quot;.&quot;, &quot;&quot;), &quot;%&quot;, &quot;&quot;), &quot;#&quot;, &quot;&quot;), &quot;/&quot;, &quot;&quot;), &quot;;&quot;, &quot;&quot;), &quot;:&quot;, &quot;&quot;), &quot;\&quot;&quot;, &quot;&quot;), &quot;_&quot;, &quot;&quot;), &quot;,&quot;, &quot;&quot;), 
&quot;PUMA2&quot;, SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE(HWS_Hardware_Sellable_Item__r.CARE_PartCode__c, &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;), &quot;&amp;&quot;, &quot;&quot;), &quot;.&quot;, &quot;&quot;), &quot;%&quot;, &quot;&quot;), &quot;#&quot;, &quot;&quot;), &quot;/&quot;, &quot;&quot;), &quot;;&quot;, &quot;&quot;), &quot;:&quot;, &quot;&quot;), &quot;_&quot;, &quot;&quot;), &quot;,&quot;, &quot;&quot;), &quot;\&quot;&quot;, &quot;&quot;)&amp;SUBSTITUTE(SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE(HWS_Version_Code__c, &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;), &quot;&amp;&quot;, &quot;&quot;), &quot;.&quot;, &quot;&quot;), &quot;%&quot;, &quot;&quot;), &quot;#&quot;, &quot;&quot;), &quot;/&quot;, &quot;&quot;), &quot;;&quot;, &quot;&quot;), &quot;:&quot;, &quot;&quot;), &quot;\&quot;&quot;, &quot;&quot;), &quot;_&quot;, &quot;&quot;), &quot;,&quot;, &quot;&quot;), 
&quot;&quot; 
))</formula>
        <label>HWS Part Code-Part Revision</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_Product_Code__c</fullName>
        <formula>HWS_Hardware_Sellable_Item__r.ProductCode</formula>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_Product_Name__c</fullName>
        <formula>HWS_Hardware_Sellable_Item__r.Name</formula>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_REUSE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>REUSE</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_SAP_Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SAP Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_Serial_Number_Traceable__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Serial Number Traceable</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_Source__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_Unit_of_Measure__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Unit of Measure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_Valid__c</fullName>
        <formula>IF( HWS_Source__c != null, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HWS Valid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HWS_Validation_Start_Date__c</fullName>
        <description>Created with the reference to the US.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Validation Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HWS_Version_Code__c</fullName>
        <description>Created as the part of the US.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Version Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Material Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RES_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>RES ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Version Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>HWS_Hardware_Sellable_Item__c</columns>
        <columns>HWS_IsRelatedToVI__c</columns>
        <columns>HWS_Description__c</columns>
        <columns>HWS_NSNCodeRelation__c</columns>
        <columns>HWS_NSN_Source_System__c</columns>
        <columns>HWS_Valid__c</columns>
        <columns>HWS_Life_Cycle_Status__c</columns>
        <columns>HWS_Manufacturer_Code__c</columns>
        <columns>Material_Code__c</columns>
        <columns>HWS_Material_Type__c</columns>
        <columns>HWS_Name__c</columns>
        <columns>HWS_NSNCode__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>HWS_NSNCodeRelation__c</field>
            <operation>contains</operation>
            <value>PUMA2</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Created_by_integration</fullName>
        <columns>HWS_NSNCode__c</columns>
        <columns>HWS_Hardware_Sellable_Item__c</columns>
        <columns>HWS_Material_Type__c</columns>
        <columns>HWS_Source__c</columns>
        <columns>HWS_Product_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Created_by_PMDI__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Created by integration</label>
    </listViews>
    <listViews>
        <fullName>Part_Revision_in_Target</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>Part Revision in Target</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Version Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Version Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>